# talika

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  zensical.toml
.github/workflows/: ci.yml  docs.yml  publish-pypi.yml  release.yml
docs/: index.md
docs/guides/advanced/: cell-dsl-composition.md  cell-dsl-patterns.md  cell-dsl-tokens.md  collect-errors.md  column-group-expansion.md  diagnostics.md  inapplicable-fields.md  output-models.md  (+6 more)
docs/javascripts/: extra.js
docs/learn/: cells-are-text.md  choosing-table-shape.md  datatables.md  evolving-tables.md  missing-empty-defaults.md  records-and-outputs.md  source-aware-diagnostics.md  table-boundary.md  table-contracts.md  table-lifecycle.md  table-vocabulary.md  validation-layers.md
docs/reference/: annotations.md  checker.md  cli.md  context.md  diagnostics.md  dsl.md  errors.md  fields.md  group-expansion.md  index.md  introspection.md  parsers.md  parsing.md  public-api.md  pytest-plugin.md  records.md  schema.md  sources.md  table.md  transformers.md
docs/start/: install.md  migrate-0-4.md  quickstart.md  why.md
docs/stylesheets/: code-effects.css  extra.css
docs_src/learn/: cells-are-text.py  choosing-table-shape.py  datatables.py  evolving-tables.py  missing-empty-defaults.py  records-and-outputs.py  source-aware-diagnostics.py  table-boundary.py  table-contracts.py  table-lifecycle.py  table-vocabulary.py  validation-layers.py
docs_src/start/: migrate-0-4.py  quickstart.py
docs_src/why/: why.py
src/talika/: __init__.py  __main__.py  annotations.py  checker.py  cli.py  column_orientation.py  context.py  diagnostics.py  dsl.py  engine.py  engine_types.py  errors.py  fields.py  group_expansion.py  introspection.py  output.py  parsers.py  parsing.py  pytest_plugin.py  records.py  references.py  row_orientation.py  schema.py  schema_compiler.py  schema_plan.py  sources.py  table.py  transformers.py  validation.py
tests/: test_annotations.py  test_cell_dsl.py  test_checker.py  test_column_table.py  test_composition.py  test_custom_parsers.py  test_defaults_aliases_policies.py  test_diagnostics.py  test_error_collection.py  test_errors.py  test_field_components.py  test_fields.py  test_functional_api.py  test_group_expansion.py  test_introspection.py  test_output_factory.py  test_output_models.py  test_package_metadata.py  test_parsers.py  test_pydantic_output.py  test_pytest_plugin.py  test_record_sources.py  test_record_validation.py  test_references.py  test_row_table.py  test_schema_architecture.py  test_table_data.py  test_table_transform.py  test_table_validation.py  test_variants.py
tests/data/: invalid_users.feature
tests/typing/: public_api.py
(+34 files in other folders)
