[project]
name = "talika"
version = "0.2.0"
description = "Typed, validated schemas for Gherkin data tables"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Chinmay Singh" },
    { name = "Nishant Bhandari" },
]
requires-python = ">=3.10"
dependencies = []
keywords = ["bdd", "pytest", "pytest-bdd", "gherkin", "testing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.urls]
Documentation = "https://talikadev.github.io/talika/"
Source = "https://github.com/talikadev/talika"
Issues = "https://github.com/talikadev/talika/issues"
Changelog = "https://github.com/talikadev/talika/blob/master/CHANGELOG.md"

[project.optional-dependencies]
cli = [
    "gherkin-official>=29.0",
]
pydantic = [
    "pydantic>=2.0",
]
test = [
    "gherkin-official>=29.0",
    "pydantic>=2.0",
    "pytest>=8.0",
    "pytest-bdd>=8.0",
    "pytest-cov>=6.0",
]

[project.scripts]
talika = "talika.cli:main"

[dependency-groups]
dev = [
    "mypy>=1.11",
    "gherkin-official>=29.0",
    "pydantic>=2.0",
    "pytest>=8.0",
    "pytest-bdd>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.11",
]
docs = [
    "zensical==0.0.45",
    "mkdocstrings-python==2.0.5",

]

[project.entry-points.pytest11]
talika = "talika.pytest_plugin"

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/talika"]

[tool.hatch.build.targets.sdist]
include = [
    "/CHANGELOG.md",
    "/CONTRIBUTING.md",
    "/LICENSE",
    "/README.md",
    "/pyproject.toml",
    "/src",
    "/tests",
]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["talika"]

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 88
target-version = "py310"
extend-exclude = ["docs_src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "D"]
ignore = ["D105", "D107", "D203", "D213"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
check_untyped_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
exclude = ["tests/"]
